--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="src/script.js"></script>
 </head>
 <body>
-    <script></script>
+    <p>Welcome to Git!</p>
+    <script>
+        Hello();
+    </script>
 </body>
 </html>
