--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <p>Welcome to Git!!пше !</p>
+    <p>Welcome to Git!</p>
     <script>
         Hello();
     </script>
