--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <p>Welcome to Git!</p>
     <script>
-        Hello(
+        sayHi();
+        //more changes here...
     </script>
+    Git rules!
+
+    Let's have some fun with git.
 </body>
 </html>
